[package]
name = "jito-protos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
prost = "0.12"
prost-types = "0.12"
solana-perf = "2.1.16"
solana-sdk = "2.1.16"
tonic = { version = "0.12.3", features = ["tls", "tls-webpki-roots", "tls-roots"] }

[build-dependencies]
tonic-build = "0.10"
